@@ -1,3 +1,11 @@
+2005-09-16  Raphael Slinckx  <rslinckx@cvs.gnome.org>
+
+	* src/bookmarks/ephy-bookmark-action.c:
+	(bookmark_activate_with_flags), (open_in_tab_activate_cb),
+	(open_in_window_activate_cb), (activate_cb):
+	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
+	Repair the previous b0rkage, see previous log
+
 2005-09-15  Raphael Slinckx  <rslinckx@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
